fix buttons alignments on mobile

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -20,6 +20,7 @@
   display: flex;
   align-items: start;
   justify-content: start;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
